# url-shorter

./: README.md  pyproject.toml
src/: main.py
src/db/: main.py  pgsql.py
src/db/functions/: config.py  gen_qrcode.py
src/routes/api/: url.py
src/routes/app/: views.py
src/static/: index.js
src/static/home/: index.js
src/static/link/: index.js
src/static/saved_url/: index.js
src/static/tailwindcss/: index.js
src/templates/home/: index.html
src/templates/link/: index.html
src/templates/saved_url/: index.html
